--- a/直播购物/productShow.html
+++ b/直播购物/productShow.html
@@ -39,9 +39,199 @@
     </header>
     <!-- 内容 start -->
     <main>
-        <div class="product-box">
-            <div class="fl">
-                <img src="" alt=""/>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-box clearfix">
+            <div class="fl product-img">
+                <img src="image/test.jpg" alt=""/>
+            </div>
+            <div class="fr product-info">
+                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+                <div class="buyinfo clearfix">
+                    <div class="fl">
+                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
+                        <div class="peopleNum">3695人已购买</div>
+                    </div>
+                    <a href="#" class="fr buyBtn main-color">去抢购</a>
+                </div>
             </div>
         </div>
     </main>
