--- a/直播购物/productShow.html
+++ b/直播购物/productShow.html
@@ -2,10 +2,10 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
     <!-- 删除苹果默认的工具栏和菜单栏 -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <!-- 设置苹果工具栏颜色 -->
     <!-- 启用360浏览器的极速模式(webkit) -->
     <meta name="renderer" content="webkit">
@@ -30,6 +30,7 @@
     <title>商品展示</title>
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/productShow.css">
+    <link rel="stylesheet" type="text/css" href="css/lib/mui.min.css">
 </head>
 <body>
 <div class="layout">
@@ -38,13 +39,15 @@
         <a href="#" class="fr">我的订单</a>
     </header>
     <!-- 内容 start -->
-    <main>
+    <main id="content" class="mui-content mui-scroll-wrapper">
+        <div class="mui-scroll">
         <div class="product-box clearfix">
             <div class="fl product-img">
                 <img src="image/test.jpg" alt=""/>
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -60,6 +63,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -75,6 +79,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -90,6 +95,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -105,6 +111,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -120,6 +127,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -135,6 +143,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -150,6 +159,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -165,6 +175,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -180,6 +191,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -195,6 +207,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -210,6 +223,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -225,6 +239,7 @@
             </div>
             <div class="fr product-info">
                 <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
+
                 <div class="buyinfo clearfix">
                     <div class="fl">
                         <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
@@ -233,6 +248,7 @@
                     <a href="#" class="fr buyBtn main-color">去抢购</a>
                 </div>
             </div>
+        </div>
         </div>
     </main>
     <!-- 内容 end -->
@@ -243,10 +259,32 @@
 <script src="js/lib/zepto.min.js"></script>
 <script src="js/lib/fastclick.min.js"></script>
 <script src="js/lib/template.js"></script>
+<script src="js/lib/mui.min.js"></script>
 <script>
     $(function () {
         // 点击延迟处理
         FastClick.attach(document.body);
+
+        mui.init({
+            pullRefresh: {
+                container: "#content",//待刷新区域标识，querySelector能定位的css选择器均可，比如：id、.class等
+                up: {
+                    height: 50,//可选.默认50.触发上拉加载拖动距离
+                    auto: true,//可选,默认false.自动上拉加载一次
+                    contentrefresh: "正在加载...",//可选，正在加载状态时，上拉加载控件上显示的标题内容
+                    contentnomore: '没有更多数据了',//可选，请求完毕若没有更多数据时显示的提醒内容；
+                    callback: function () {
+                        //业务逻辑代码，比如通过ajax从服务器获取新数据；
+
+                        //注意：
+                        //1、加载完新数据后，必须执行如下代码，true表示没有更多数据了：
+                        //2、若为ajax请求，则需将如下代码放置在处理完ajax响应数据之后
+                        this.endPullupToRefresh(true | false);
+                    }//必选，刷新函数，根据具体业务来编写，比如通过ajax从服务器获取新数据；
+                }
+            }
+        });
+
     })
 </script>
 </body>
