--- a/直播购物/productShow.html
+++ b/直播购物/productShow.html
@@ -28,9 +28,9 @@
     <meta name='apple-itunes-app' content='app-id=966436668'>
     <!-- 适应移动端end -->
     <title>商品展示</title>
+    <link rel="stylesheet" type="text/css" href="css/lib/mui.min.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/productShow.css">
-    <link rel="stylesheet" type="text/css" href="css/lib/mui.min.css">
 </head>
 <body>
 <div class="layout">
@@ -41,70 +41,6 @@
     <!-- 内容 start -->
     <main id="content" class="mui-content mui-scroll-wrapper">
         <div class="mui-scroll">
-        <div class="product-box clearfix">
-            <div class="fl product-img">
-                <img src="image/test.jpg" alt=""/>
-            </div>
-            <div class="fr product-info">
-                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
-
-                <div class="buyinfo clearfix">
-                    <div class="fl">
-                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
-                        <div class="peopleNum">3695人已购买</div>
-                    </div>
-                    <a href="#" class="fr buyBtn main-color">去抢购</a>
-                </div>
-            </div>
-        </div>
-        <div class="product-box clearfix">
-            <div class="fl product-img">
-                <img src="image/test.jpg" alt=""/>
-            </div>
-            <div class="fr product-info">
-                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
-
-                <div class="buyinfo clearfix">
-                    <div class="fl">
-                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
-                        <div class="peopleNum">3695人已购买</div>
-                    </div>
-                    <a href="#" class="fr buyBtn main-color">去抢购</a>
-                </div>
-            </div>
-        </div>
-        <div class="product-box clearfix">
-            <div class="fl product-img">
-                <img src="image/test.jpg" alt=""/>
-            </div>
-            <div class="fr product-info">
-                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
-
-                <div class="buyinfo clearfix">
-                    <div class="fl">
-                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
-                        <div class="peopleNum">3695人已购买</div>
-                    </div>
-                    <a href="#" class="fr buyBtn main-color">去抢购</a>
-                </div>
-            </div>
-        </div>
-        <div class="product-box clearfix">
-            <div class="fl product-img">
-                <img src="image/test.jpg" alt=""/>
-            </div>
-            <div class="fr product-info">
-                <h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>
-
-                <div class="buyinfo clearfix">
-                    <div class="fl">
-                        <div class="price"><b>￥258.00</b><s>￥458.00</s></div>
-                        <div class="peopleNum">3695人已购买</div>
-                    </div>
-                    <a href="#" class="fr buyBtn main-color">去抢购</a>
-                </div>
-            </div>
-        </div>
         <div class="product-box clearfix">
             <div class="fl product-img">
                 <img src="image/test.jpg" alt=""/>
@@ -270,7 +206,7 @@
                 container: "#content",//待刷新区域标识，querySelector能定位的css选择器均可，比如：id、.class等
                 up: {
                     height: 50,//可选.默认50.触发上拉加载拖动距离
-                    auto: true,//可选,默认false.自动上拉加载一次
+                    auto: false,//可选,默认false.自动上拉加载一次
                     contentrefresh: "正在加载...",//可选，正在加载状态时，上拉加载控件上显示的标题内容
                     contentnomore: '没有更多数据了',//可选，请求完毕若没有更多数据时显示的提醒内容；
                     callback: function () {
