--- a/liveShopping/productShow.html
+++ b/liveShopping/productShow.html
@@ -41,22 +41,6 @@
     <!-- 内容 start -->
     <main id="content" class="mui-content mui-scroll-wrapper">
         <div class="mui-scroll" id="mui-scroll">
-            <!--<div class="product-box clearfix">-->
-                <!--<div class="fl product-img">-->
-                    <!--<img src="image/test.jpg" alt=""/>-->
-                <!--</div>-->
-                <!--<div class="fr product-info">-->
-                    <!--<h3 class="product-title">adidas 休闲运动鞋潮人博主力荐必须人手必备</h3>-->
-
-                    <!--<div class="buyinfo clearfix">-->
-                        <!--<div class="fl">-->
-                            <!--<div class="price"><b>￥258.00</b><s>￥458.00</s></div>-->
-                            <!--<div class="peopleNum">3695人已购买</div>-->
-                        <!--</div>-->
-                        <!--<a href="#" class="fr buyBtn main-color">去抢购</a>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
         </div>
     </main>
     <!-- 内容 end -->
@@ -105,24 +89,39 @@
                 console.log(data);
                 $("header .fl").data("content",data.prodCount);//在css中，伪元素的content是能读取到data属性的。
                 var html = template('product-box', data);
-                console.log(html);
                 $('#mui-scroll').html(html);
 //                下拉更多
                 mui.init({
                     pullRefresh: {
                         container: "#content",//待刷新区域标识，querySelector能定位的css选择器均可，比如：id、.class等
                         up: {
-                            height: 50,//可选.默认50.触发上拉加载拖动距离
+                            height: 0,//可选.默认50.触发上拉加载拖动距离
                             auto: false,//可选,默认false.自动上拉加载一次
                             contentrefresh: "正在加载...",//可选，正在加载状态时，上拉加载控件上显示的标题内容
                             contentnomore: '没有更多数据了',//可选，请求完毕若没有更多数据时显示的提醒内容；
                             callback: function () {
                                 //业务逻辑代码，比如通过ajax从服务器获取新数据；
-
+                                params.curPageNO=data.curPageNO+1;
+                                $.ajax({
+                                    url: "data/productShow.json",
+                                    type: "GET",
+                                    data: params,
+                                    dataType: "json",
+                                    success: function (pataData) {
+                                            mui('#content').pullRefresh().endPullupToRefresh(pataData.prodList.length==0);
+                                            var pataData = pataData;
+                                            console.log(pataData);
+                                            var pataHtml = template('product-box', pataData);
+                                            $('#mui-scroll').append(pataHtml);
+                                    },
+                                    error: function (err) {
+                                        console.log(err)
+                                    }
+                                })
                                 //注意：
                                 //1、加载完新数据后，必须执行如下代码，true表示没有更多数据了：
                                 //2、若为ajax请求，则需将如下代码放置在处理完ajax响应数据之后
-                                this.endPullupToRefresh(true | false);
+
                             }//必选，刷新函数，根据具体业务来编写，比如通过ajax从服务器获取新数据；
                         }
                     }
