--- a/liveShopping/productShow.html
+++ b/liveShopping/productShow.html
@@ -109,7 +109,7 @@
                                     dataType: "json",
                                     success: function (pataData) {
                                         console.log(pataData);
-                                        mui('#content').pullRefresh().endPullupToRefresh(pataData.prodList.length==0);
+                                        mui('#content').pullRefresh().endPullupToRefresh(pataData=={});
                                             var pataData = pataData;
                                             console.log(pataData);
                                             var pataHtml = template('product-box', pataData);
