编码更改，productSelect增加noProduct类

--- a/liveShopping/productSelect.html
+++ b/liveShopping/productSelect.html
@@ -89,6 +89,9 @@
             addtimeOrder:"desc"
         };
         getProductList(params);
+        if($(".product-box").size()==0){
+            $("#mui-scroll").addClass("noProduct");
+        }
         $(".shop-nav li").bind('click', function() {
             var field = $(this).find("i").data("field");
             if ($(this).hasClass("up")) {
